curso apollo client: mutations

--- a/src/componentes/BarraNavegacao/BarraNavegacao.css
+++ b/src/componentes/BarraNavegacao/BarraNavegacao.css
@@ -10,8 +10,9 @@
     display: inline-block;
 }
 
-.ab-navbar ul {
-    display: inline-block;
+.ab-navbar>ul {
+    display: flex;
+    align-items: center;
 }
 
 .ab-navbar {
@@ -21,7 +22,8 @@
     flex-grow: 1;
 }
 
-.ab-navbar ul li {
+.ab-navbar>ul>li, 
+.submenu>li {
     display: inline-block;
     box-sizing: border-box;
     padding: 10px;
@@ -30,19 +32,20 @@
 }
 
 .ab-navbar .acoes .submenu li:hover,
-.ab-navbar ul li:hover {
+.ab-navbar>ul>li:hover, 
+.submenu>li:hover {
     background: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
     color: #fff;
 }
 
 
-.ab-navbar ul li a {
+.ab-navbar>ul>li a {
     text-transform: uppercase;
     text-decoration: none;
     color: inherit;
 }
 
-.ab-navbar ul li a .logo {
+.ab-navbar>ul>li a .logo {
     margin-top: 20px;
 }
 
@@ -54,21 +57,22 @@
     background-color: #fff;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
     display: none;
+    z-index: 1000;
 }
 
 .ab-navbar ul.submenu li {
     min-width: 100%;
 }
-.ab-navbar ul li:hover .submenu {
+.ab-navbar>ul>li:hover .submenu {
     display: block;
 }
 
-.ab-navbar ul.acoes {
+.ab-navbar>ul.acoes {
     display: flex;
     align-items: center;
 }
 
-.ab-navbar ul.acoes li:hover {
+.ab-navbar>ul.acoes li:hover {
     background: #fff;
     color: #000;
 }
